--- a/views/index.html
+++ b/views/index.html
@@ -3,9 +3,9 @@
   <meta charset="UTF-8">
   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
   <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
-  <script language="javascript" type="text/javascript" src="bird.js"></script>
-  <script language="javascript" type="text/javascript" src="pipe.js"></script>
+  <script language="javascript" type="text/javascript" src="/js/sketch.js"></script>
+  <script language="javascript" type="text/javascript" src="/js/bird.js"></script>
+  <script language="javascript" type="text/javascript" src="/js/pipe.js"></script>
 
 </head>
 
