--- a/views/index.html
+++ b/views/index.html
@@ -1,15 +1,58 @@
-<html>
-<head>
-  <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
-  <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
-  <script language="javascript" type="text/javascript" src="/js/sketch.js"></script>
-  <script language="javascript" type="text/javascript" src="/js/bird.js"></script>
-  <script language="javascript" type="text/javascript" src="/js/pipe.js"></script>
 
-</head>
+<div class="header"></div>
+<!-- Scripts Header -->
+<script src="/js/jquery.min.js"></script>
+<script src="/js/jquery.scrollex.min.js"></script>
+<script src="/js/skel.min.js"></script>
+<script src="/js/util.js"></script>
+<script src="/js/main.js"></script>
+<script src="/js/header.js"></script>
 
-<body>
-	<div id="bird-canvas"></div>
-</body>
-</html>
+<!-- One -->
+	<section id="one" class="wrapper style2">
+		<div class="inner">
+			<div class="grid-style">
+
+				<div>
+					<div class="box">
+						<div class="image fit">
+							<img src="images/pic02.jpg" alt="" />
+						</div>
+						<div class="content">
+							<header class="align-center">
+								<p>maecenas sapien feugiat ex purus</p>
+								<h2>Lorem ipsum dolor</h2>
+							</header>
+							<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+							<footer class="align-center">
+								<a href="demo1" class="button alt">Demo</a>
+							</footer>
+						</div>
+					</div>
+				</div>
+
+				<div>
+					<div class="box">
+						<div class="image fit">
+							<img src="images/pic03.jpg" alt="" />
+						</div>
+						<div class="content">
+							<header class="align-center">
+								<p>mattis elementum sapien pretium tellus</p>
+								<h2>Vestibulum sit amet</h2>
+							</header>
+							<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+							<footer class="align-center">
+								<a href="demo2" class="button alt">Demo</a>
+							</footer>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</section>
+
+<!-- Scripts Footer -->
+<div class="footer"></div>
+<script src="/js/footer.js"></script>
