--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
 				<div>
 					<div class="box">
 						<div class="image fit">
-							<img src="images/pic02.jpg" alt="" />
+							<img src="images/demo1.jpg" alt="" />
 						</div>
 						<div class="content">
 							<header class="align-center">
@@ -34,7 +34,7 @@
 				<div>
 					<div class="box">
 						<div class="image fit">
-							<img src="images/pic03.jpg" alt="" />
+							<img src="images/demo1.jpg" alt="" />
 						</div>
 						<div class="content">
 							<header class="align-center">
