--- a/views/index.html
+++ b/views/index.html
@@ -20,10 +20,10 @@
 						</div>
 						<div class="content">
 							<header class="align-center">
-								<p>maecenas sapien feugiat ex purus</p>
-								<h2>Lorem ipsum dolor</h2>
+								<p>AI In Simple Flappy Bird Game</p>
+								<h2>Bird Neuron</h2>
 							</header>
-							<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+							<p> simple game similar to flappy bird using P5 library, then we implement neural network into the game. Meanwhile, we also construct Nodejs server using Express framework</p>
 							<footer class="align-center">
 								<a href="demo1" class="button alt">Demo</a>
 							</footer>
@@ -38,10 +38,10 @@
 						</div>
 						<div class="content">
 							<header class="align-center">
-								<p>mattis elementum sapien pretium tellus</p>
-								<h2>Vestibulum sit amet</h2>
+								<p>AI In Simple Flappy Bird Game</p>
+								<h2>Bird Neuron</h2>
 							</header>
-							<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+							<p> simple game similar to flappy bird using P5 library, then we implement neural network into the game. Meanwhile, we also construct Nodejs server using Express framework</p>
 							<footer class="align-center">
 								<a href="demo2" class="button alt">Demo</a>
 							</footer>
