--- a/views/about_us.html
+++ b/views/about_us.html
@@ -8,6 +8,15 @@
 <script src="/js/main.js"></script>
 <script src="/js/header.js"></script>
 
+<!-- Bootstrap librrary -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js">
+
 <!-- Two -->
 	<section id="two" class="wrapper style2">
 		<div class="inner">
