--- a/views/demo1.html
+++ b/views/demo1.html
@@ -16,7 +16,13 @@
   <script language="javascript" type="text/javascript" src="/js/bird.js"></script>
   <script language="javascript" type="text/javascript" src="/js/pipe.js"></script>
 
-	<div id="bird-canvas"></div>
+<section id="one" class="wrapper style2">
+		<div class="inner">
+			<div class="grid-style">
+				<div id="bird-canvas"></div>
+			</div>
+		</div>
+</section>
 
 
 <!-- Scripts Footer -->
