--- a/views/demo1.html
+++ b/views/demo1.html
@@ -1,4 +1,4 @@
-
+<meta charset="UTF-8">
 <div class="header"></div>
 <!-- Scripts Header -->
 <script src="/js/jquery.min.js"></script>
@@ -9,25 +9,39 @@
 <script src="/js/header.js"></script>
 
 
-  <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
-  <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
-  <script language="javascript" type="text/javascript" src="/js/nn.js"></script>
-  <script language="javascript" type="text/javascript" src="/js/matrix.js"></script>
-  <script language="javascript" type="text/javascript" src="/js/ga.js"></script>
-  <script language="javascript" type="text/javascript" src="/js/sketch.js"></script>
-  <script language="javascript" type="text/javascript" src="/js/bird.js"></script>
-  <script language="javascript" type="text/javascript" src="/js/pipe.js"></script>
+ <!-- Scripts Birds -->
+<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"> </script>
+<script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
+<script language="javascript" type="text/javascript" src="/js/nn.js"></script>
+<script language="javascript" type="text/javascript" src="/js/matrix.js"></script>
+<script language="javascript" type="text/javascript" src="/js/ga.js"></script>
+<script language="javascript" type="text/javascript" src="/js/sketch.js"></script>
+<script language="javascript" type="text/javascript" src="/js/bird.js"></script>
+<script language="javascript" type="text/javascript" src="/js/pipe.js"></script>
 
-	<div id="bird-canvas"></div>
-	<p>
-		Speed: <input id="speedSlider" type="range" min="1" max="10" value="1"> <span id="speed">1</span>
-		<br/> High score: <span id="hs">0</span>
-		<br/> All time high score: <span id="ahs">0</span>
-	</p>
-	<p>
-		<button id="best">run best so far</button>
-	</p>
+
+	<section id="one" class="wrapper style2">
+		<div class="inner">
+			<div class="grid-style">
+				<div class="box">
+			<div id="bird-canvas"></div>
+			 </div>
+			 <div class="box">
+				<p>
+					Speed: <input id="speedSlider" type="range" min="1" max="10" value="1"> <span id="speed">1</span>
+					<br/> High score: <span id="hs">0</span>
+					<br/> All time high score: <span id="ahs">0</span>
+				</p>
+				<p>
+					<button id="best">run best so far</button>
+				</p>
+			</div>
+			</div>
+		</div>
+	</section>
+
+
+	
 
 
 <!-- Scripts Footer -->
