--- a/views/header.html
+++ b/views/header.html
@@ -22,7 +22,9 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="/">Home</a></li>
-					<li><a href="about_us">About Us</a></li>
+					<li><a href="demo1">Demo 1</a></li>
+					<!-- <li><a href="demo2">Demo 2</a></li> -->
+					<!-- <li><a href="about_us">About Us</a></li> -->
 				</ul>
 			</nav>
 
