--- a/views/demo1.html
+++ b/views/demo1.html
@@ -23,10 +23,10 @@
 	<section id="one" class="wrapper style2">
 		<div class="inner">
 			<div class="grid-style">
-				<div class="box">
+				<div class="box" style="width: 650 !important">
 			<div id="bird-canvas"></div>
 			 </div>
-			 <div class="box">
+			 <div class="box" style="width: 450 !important">
 				<p>
 					Speed: <input id="speedSlider" type="range" min="1" max="10" value="1"> <span id="speed">1</span>
 					<br/> High score: <span id="hs">0</span>
