Fix view + add coming soon game

--- a/views/index.html
+++ b/views/index.html
@@ -21,9 +21,9 @@
 						<div class="content">
 							<header class="align-center">
 								<p>AI In Simple Flappy Bird Game</p>
-								<h2>Bird Neuron</h2>
+								<h2>Flappy Bird</h2>
 							</header>
-							<p> simple game similar to flappy bird using P5 library, then we implement neural network into the game. Meanwhile, we also construct Nodejs server using Express framework</p>
+							<p> Simple game similar to flappy bird using P5 library with neural network.
 							<footer class="align-center">
 								<a href="demo1" class="button alt">Demo</a>
 							</footer>
@@ -34,16 +34,16 @@
 				<div>
 					<div class="box">
 						<div class="image fit">
-							<img src="images/demo1.jpg" alt="" />
+							<img src="images/comingsoon.png" alt="" />
 						</div>
 						<div class="content">
 							<header class="align-center">
-								<p>AI In Simple Flappy Bird Game</p>
-								<h2>Bird Neuron</h2>
+								<p>Upcoming game</p>
+								<h2>Upcoming Game</h2>
 							</header>
-							<p> simple game similar to flappy bird using P5 library, then we implement neural network into the game. Meanwhile, we also construct Nodejs server using Express framework</p>
+							<p> Upcoming game using Birdneuron library</p>
 							<footer class="align-center">
-								<a href="demo2" class="button alt">Demo</a>
+								<!-- <a href="demo2" class="button alt">Demo</a> -->
 							</footer>
 						</div>
 					</div>
