Restructure javascript for new maze game

--- a/views/demo2.html
+++ b/views/demo2.html
@@ -1,4 +1,4 @@
-
+<meta charset="UTF-8">
 <div class="header"></div>
 <!-- Scripts Header -->
 <script src="/js/jquery.min.js"></script>
@@ -8,15 +8,14 @@
 <script src="/js/main.js"></script>
 <script src="/js/header.js"></script>
 
+<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"> </script>
+<script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
+<script language="javascript" type="text/javascript" src="/js/lib/nn.js"></script>
+<script language="javascript" type="text/javascript" src="/js/lib/matrix.js"></script>
 
-  <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
-  <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
-  <script language="javascript" type="text/javascript" src="/js/sketch.js"></script>
-  <script language="javascript" type="text/javascript" src="/js/bird.js"></script>
-  <script language="javascript" type="text/javascript" src="/js/pipe.js"></script>
+<script language="javascript" type="text/javascript" src="/js/maze/sketch.js"></script>
 
-	<div id="bird-canvas"></div>
+	<div id="maze-canvas"></div>
 
 
 <!-- Scripts Footer -->
