--- a/views/index.html
+++ b/views/index.html
@@ -34,16 +34,16 @@
 				<div>
 					<div class="box">
 						<div class="image fit">
-							<img src="images/comingsoon.png" alt="" />
+							<img src="images/maze-background.jpg" alt="" />
 						</div>
 						<div class="content">
 							<header class="align-center">
-								<p>Upcoming game</p>
-								<h2>Upcoming Game</h2>
+								<p>Neural network applied to The Maze game</p>
+								<h2>The Maze</h2>
 							</header>
-							<p> Upcoming game using Birdneuron library</p>
+							<p> The maze game using P5 library with Neural Network</p>
 							<footer class="align-center">
-								<!-- <a href="demo2" class="button alt">Demo</a> -->
+								<a href="demo2" class="button alt">Demo</a>
 							</footer>
 						</div>
 					</div>
