--- a/views/demo1.html
+++ b/views/demo1.html
@@ -12,12 +12,12 @@
  <!-- Scripts Birds -->
 <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"> </script>
 <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
-<script language="javascript" type="text/javascript" src="/js/nn.js"></script>
-<script language="javascript" type="text/javascript" src="/js/matrix.js"></script>
-<script language="javascript" type="text/javascript" src="/js/ga.js"></script>
-<script language="javascript" type="text/javascript" src="/js/sketch.js"></script>
-<script language="javascript" type="text/javascript" src="/js/bird.js"></script>
-<script language="javascript" type="text/javascript" src="/js/pipe.js"></script>
+<script language="javascript" type="text/javascript" src="/js/lib/nn.js"></script>
+<script language="javascript" type="text/javascript" src="/js/lib/matrix.js"></script>
+<script language="javascript" type="text/javascript" src="/js/flappybird/ga.js"></script>
+<script language="javascript" type="text/javascript" src="/js/flappybird/sketch.js"></script>
+<script language="javascript" type="text/javascript" src="/js/flappybird/bird.js"></script>
+<script language="javascript" type="text/javascript" src="/js/flappybird/pipe.js"></script>
 
 
 	<section id="one" class="wrapper style2">
@@ -39,9 +39,6 @@
 			</div>
 		</div>
 	</section>
-
-
-	
 
 
 <!-- Scripts Footer -->
