--- a/views/demo2.html
+++ b/views/demo2.html
@@ -8,15 +8,41 @@
 <script src="/js/main.js"></script>
 <script src="/js/header.js"></script>
 
-<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"> </script>
-<script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
+<!-- <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"> </script>
+<script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script> -->
 <script language="javascript" type="text/javascript" src="/js/lib/nn.js"></script>
 <script language="javascript" type="text/javascript" src="/js/lib/matrix.js"></script>
 
+<script src="/js/maze/p5.min.js"></script>
+<script src="/js/maze/p5.dom.min.js"></script>
+<script src="/js/maze/p5.sound.min.js"></script>
+<!-- <script language="javascript" type="text/javascript" src="/js/maze/maze.js"></script> -->
 <script language="javascript" type="text/javascript" src="/js/maze/sketch.js"></script>
+<script language="javascript" type="text/javascript" src="/js/maze/cell.js"></script>
 
-	<div id="maze-canvas"></div>
 
+
+<!-- <link rel="stylesheet" type="text/css" href="/js/maze/style.css"> -->
+
+<section id="one" class="wrapper style2">
+		<div class="inner">
+			<div class="grid-style">
+				<div class="box" style="width: 600 !important">
+			<div id="maze-canvas"></div>
+			 </div>
+			 <div class="box" style="width: 600 !important">
+				<!-- <p>
+					Speed: <input id="speedSlider" type="range" min="1" max="10" value="1"> <span id="speed">1</span>
+					<br/> High score: <span id="hs">0</span>
+					<br/> All time high score: <span id="ahs">0</span>
+				</p>
+				<p>
+					<button id="best">run best so far</button>
+				</p> -->
+			</div>
+			</div>
+		</div>
+</section>
 
 <!-- Scripts Footer -->
 <div class="footer"></div>
