update maze lib

--- a/views/demo2.html
+++ b/views/demo2.html
@@ -8,15 +8,12 @@
 <script src="/js/main.js"></script>
 <script src="/js/header.js"></script>
 
-<!-- <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"> </script>
-<script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script> -->
+<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"> </script>
+<script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
 <script language="javascript" type="text/javascript" src="/js/lib/nn.js"></script>
 <script language="javascript" type="text/javascript" src="/js/lib/matrix.js"></script>
 
-<script src="/js/maze/p5.min.js"></script>
-<script src="/js/maze/p5.dom.min.js"></script>
-<script src="/js/maze/p5.sound.min.js"></script>
-<!-- <script language="javascript" type="text/javascript" src="/js/maze/maze.js"></script> -->
+<!-- Maze lib -->
 <script language="javascript" type="text/javascript" src="/js/maze/sketch.js"></script>
 <script language="javascript" type="text/javascript" src="/js/maze/cell.js"></script>
 
