--- a/views/demo1.html
+++ b/views/demo1.html
@@ -12,12 +12,15 @@
  <!-- Scripts Birds -->
 <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"> </script>
 <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
-<script language="javascript" type="text/javascript" src="/js/lib/nn.js"></script>
-<script language="javascript" type="text/javascript" src="/js/lib/matrix.js"></script>
+<!-- <script language="javascript" type="text/javascript" src="/js/birdneuron/lib/nn.js"></script> -->
+<script language="javascript" type="text/javascript" src="/js/birdneuron/lib/core.min.js"></script>
+<script language="javascript" type="text/javascript" src="/js/birdneuron/lib/lodash.js"></script>
+<script language="javascript" type="text/javascript" src="/js/birdneuron/birdneuron.js"></script>
 <script language="javascript" type="text/javascript" src="/js/flappybird/ga.js"></script>
-<script language="javascript" type="text/javascript" src="/js/flappybird/sketch.js"></script>
 <script language="javascript" type="text/javascript" src="/js/flappybird/bird.js"></script>
 <script language="javascript" type="text/javascript" src="/js/flappybird/pipe.js"></script>
+<script language="javascript" type="text/javascript" src="/js/flappybird/sketch.js"></script>
+
 
 
 	<section id="one" class="wrapper style2">
@@ -32,9 +35,9 @@
 					<br/> High score: <span id="hs">0</span>
 					<br/> All time high score: <span id="ahs">0</span>
 				</p>
-				<p>
+<!-- 				<p>
 					<button id="best">run best so far</button>
-				</p>
+				</p> -->
 			</div>
 			</div>
 		</div>
