--- a/views/demo2.html
+++ b/views/demo2.html
@@ -10,8 +10,8 @@
 
 <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"> </script>
 <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
-<script language="javascript" type="text/javascript" src="/js/lib/nn.js"></script>
-<script language="javascript" type="text/javascript" src="/js/lib/matrix.js"></script>
+<script language="javascript" type="text/javascript" src="/js/birdneuron/lib/nn.js"></script>
+<script language="javascript" type="text/javascript" src="/js/birdneuron/lib/matrix.js"></script>
 
 <script language="javascript" type="text/javascript" src="/js/maze/sketch.js"></script>
 
