--- a/views/demo2.html
+++ b/views/demo2.html
@@ -14,9 +14,10 @@
 <script language="javascript" type="text/javascript" src="/js/lib/matrix.js"></script>
 
 <!-- Maze lib -->
+<script language="javascript" type="text/javascript" src="/js/maze/finder.js"></script>
 <script language="javascript" type="text/javascript" src="/js/maze/sketch.js"></script>
 <script language="javascript" type="text/javascript" src="/js/maze/cell.js"></script>
-
+<meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
 
 <!-- <link rel="stylesheet" type="text/css" href="/js/maze/style.css"> -->
@@ -24,20 +25,11 @@
 <section id="one" class="wrapper style2">
 		<div class="inner">
 			<div class="grid-style">
-				<div class="box" style="width: 600 !important">
+				<div class="box" style="width: 1000 !important">
 			<div id="maze-canvas"></div>
-			 </div>
-			 <div class="box" style="width: 600 !important">
-				<!-- <p>
-					Speed: <input id="speedSlider" type="range" min="1" max="10" value="1"> <span id="speed">1</span>
-					<br/> High score: <span id="hs">0</span>
-					<br/> All time high score: <span id="ahs">0</span>
-				</p>
-				<p>
-					<button id="best">run best so far</button>
-				</p> -->
-			</div>
-			</div>
+			<button id="best"> Generate Maze </button>
+			<button id="solve"> Solve Maze </button>
+			<!-- <button id="best"> Train AI </button> -->
 		</div>
 </section>
 
