--- a/views/demo1.html
+++ b/views/demo1.html
@@ -30,9 +30,9 @@
 					<br/> High score: <span id="hs">0</span>
 					<br/> All time high score: <span id="ahs">0</span>
 				</p>
-<!-- 				<p>
-					<button id="best">run best so far</button>
-				</p> -->
+				<p>
+					<button id="pause">Pause</button>
+				</p>
 			</div>
 			</div>
 		</div>
