Add simple download json function

--- a/views/demo1.html
+++ b/views/demo1.html
@@ -32,6 +32,7 @@
 				</p>
 				<p>
 					<button id="pause">Pause</button>
+					<button id="exportmodel">Export model</button>
 				</p>
 			</div>
 			</div>
