--- a/views/demo2.html
+++ b/views/demo2.html
@@ -29,7 +29,7 @@
 				<div class="box" style="width: 1000 !important">
 			<div id="maze-canvas"></div>
 			<button id="best"> Generate Maze </button>
-			<button id="solve"> Solve Maze </button>
+			<!-- <button id="solve"> Solve Maze </button> -->
 			<!-- <button id="best"> Train AI </button> -->
 		</div>
 </section>
