Add import/export functions

--- a/views/demo1.html
+++ b/views/demo1.html
@@ -33,6 +33,7 @@
 				<p>
 					<button id="pause">Pause</button>
 					<button id="exportmodel">Export model</button>
+					<button id="importmodel">Import model</button>
 				</p>
 			</div>
 			</div>
