--- a/views/demo2.html
+++ b/views/demo2.html
@@ -29,6 +29,7 @@
 				<div class="box" style="width: 1000 !important">
 			<div id="maze-canvas"></div>
 			<button id="best"> Generate Maze </button>
+			Speed: <input id="speedSlider" type="range" min="1" max="30" value="1"> <span id="speed">1</span>
 			<!-- <button id="solve"> Solve Maze </button> -->
 			<!-- <button id="best"> Train AI </button> -->
 		</div>
