--- a/views/demo2.html
+++ b/views/demo2.html
@@ -30,7 +30,7 @@
 			<div id="maze-canvas"></div>
 			<button id="best"> Generate Maze </button>
 			Speed: <input id="speedSlider" type="range" min="1" max="30" value="1"> <span id="speed">1</span>
-			<!-- <button id="solve"> Solve Maze </button> -->
+			<br/> Generation: <span id="generation">0</span>
 			<!-- <button id="best"> Train AI </button> -->
 		</div>
 </section>
