--- a/views/demo1.html
+++ b/views/demo1.html
@@ -2,6 +2,7 @@
 <div class="header"></div>
 
 <link rel="stylesheet" type="text/css" href="css/d3.css" />
+<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 
 <!-- Scripts Header -->
 <script src="/js/jquery.min.js"></script>
@@ -38,12 +39,25 @@
 					<button id="pause">Pause</button>
 					<button id="exportmodel">Export model</button>
 					<button id="importmodel">Import model</button>
+					<button id="upload_chart" style="margin-top:10px;">Upload data</button>
 				</p>
 
 			</div>
-			<p style="font-size: 30px;">Score chart: </p>
+			<p style="font-size: 30px;">Score chart:
+				<button id="show_current_data" style="font-size:15px;">Show data</button>
+			</p>
+
 			<div id="linechart" style="width:100%; height:400px;border:1px dashed black;background-color: white;"></div>
 			</div>
+
+			<p style="font-size: 30px;">Data from cloud
+				<button id="refresh_data" style="font-size:15px;">Refresh</button>
+			</p>
+			
+			<!-- <div class = "container"> -->
+	         <div id="history" class="list-group" style="max-height: 400px;overflow: scroll;">
+	         </div>
+	      <!-- </div> -->
 		</div>
 	</section>
 
