--- a/views/demo2.html
+++ b/views/demo2.html
@@ -7,10 +7,11 @@
 <script src="/js/util.js"></script>
 <script src="/js/main.js"></script>
 <script src="/js/header.js"></script>
+<link rel="stylesheet" type="text/css" href="css/d3.css" />
 
 <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"> </script>
 <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
-
+<script language="javascript" type="text/javascript" src="/js/lib/d3.min.js"></script>
 <script language="javascript" type="text/javascript" src="/js/lib/birdneuron.js"></script>
 
 <!-- Maze lib -->
@@ -28,10 +29,30 @@
 			<div class="grid-style">
 				<div class="box" style="width: 1000 !important">
 			<div id="maze-canvas"></div>
-			<button id="best"> Generate Maze </button>
+			<!-- <button id="best"> Generate Maze </button>
 			Speed: <input id="speedSlider" type="range" min="1" max="30" value="1"> <span id="speed">1</span>
-			<br/> Generation: <span id="generation">0</span>
-			<!-- <button id="best"> Train AI </button> -->
+			Generation: <span id="generation">0</span>
+			<br/> 
+			<p>
+					<button id="exportmodel">Export model</button>
+					<button id="importmodel">Import model</button>
+			</p> -->
+
+			<p>
+					Speed: <input id="speedSlider" type="range" min="1" max="10" value="1"> <span id="speed">1</span>
+					<!-- <br/> High score: <span id="hs">0</span> -->
+					<br/> Generation: <span id="generation"> 0 </span>
+				</p>
+				<p>
+					<button id="best"> Generate Maze </button>
+					<button id="exportmodel">Export model</button>
+					<button id="importmodel">Import model</button>
+				</p>
+
+			<p style="font-size: 30px;">Score chart: </p>
+			<div id="linechart" style="width:100%; height:400px;border:1px dashed black;background-color: white;"></div>
+			</div>
+
 		</div>
 </section>
 
