--- a/views/header.html
+++ b/views/header.html
@@ -24,7 +24,7 @@
 					<li><a href="/">Home</a></li>
 					<li><a href="demo1">Flappy Bird</a></li>
 					<li><a href="demo2">The Maze</a></li>
-					<!-- <li><a href="about_us">About Us</a></li> -->
+					<li><a href="document">Document API</a></li>
 				</ul>
 			</nav>
 
