--- a/views/header.html
+++ b/views/header.html
@@ -25,6 +25,7 @@
 					<li><a href="demo1">Flappy Bird</a></li>
 					<li><a href="demo2">The Maze</a></li>
 					<li><a href="document">Document API</a></li>
+					<li><a href="usage">Usage</a></li>
 				</ul>
 			</nav>
 
