--- a/views/index.html
+++ b/views/index.html
@@ -53,6 +53,22 @@
 		</div>
 	</section>
 
+	<section id="two" class="wrapper style2" style="color: #333 !important">
+		<div class="inner">
+			<div class="box">
+				<div class="content">
+					<header class="align-center">
+						<p>Library</p>
+						<h2>Verson 1.0.0</h2>
+					</header>
+					<ul class="actions align-center">
+									<li><a href="#download" class="button special">Download Now</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+
 <!-- Scripts Footer -->
 <div class="footer"></div>
 <script src="/js/footer.js"></script>
