Add some documents

--- a/views/document.html
+++ b/views/document.html
@@ -31,7 +31,7 @@
 							</dd>
 							<br/>
 
-							<dt>Population</dt>
+							<dt>population</dt>
 							<dd>
 								<p>Get and set the total population number</p>
 							</dd>
@@ -122,6 +122,12 @@
 							<dt>refreshPopulation()</dt>
 							<dd>
 								<p>Copy the models in ‘population’ array to the ‘active population’ array</p>
+							</dd>
+							<br />
+
+							<dt>nextGeneration(preresetFunc)</dt>
+							<dd>
+								<p>Generate new generation with mutation and pool selection</p>
 							</dd>
 
 						</dl>
